samples/_failures_safe/1761440302_214a16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d4a4609.c: In function ‘main’:
./samples/SAFE/__tmp_6d4a4609.c:146:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  146 |     size_t decompressed_size
      |     ^~~~~~
./samples/SAFE/__tmp_6d4a4609.c:146:5: error: expected declaration or statement at end of input
